[FRA-148][BE]Fix cors issue.